image name changed and docker image permissions

--- a/struts-netpol-demo/Dockerfile
+++ b/struts-netpol-demo/Dockerfile
@@ -6,6 +6,6 @@ RUN mvn package
 
 FROM davidcaste/alpine-tomcat:tomcat7
 WORKDIR /root/
-COPY --from=0 /app/target/struts-networkpolicy-demo-0.0.1-SNAPSHOT.war  /opt/tomcat/webapps/struts-netpol-demo.war 
-RUN chmod 777 /opt/tomcat/webapps -R 
+COPY --from=0 /app/target/struts-networkpolicy-demo-0.0.1-SNAPSHOT.war  /opt/tomcat/webapps/ROOT.war 
+RUN chmod 777 /opt/tomcat -R 
 CMD /opt/tomcat/bin/catalina.sh run
