changed docker file multistage to onestage

--- a/struts-netpol-demo/Dockerfile
+++ b/struts-netpol-demo/Dockerfile
@@ -20,21 +20,6 @@ RUN mkdir /opt && \
     rm ~/.m2 -rf && \
     rm /opt/apace-maven* -rf 
 
+EXPOSE 8080 
 
 CMD /opt/apache-tomcat-6.0.0/bin/catalina.sh run
-
-
-
-
-
-
-#FROM andreptb/maven:3.2.5-jdk6
-#WORKDIR /app
-#ADD . /app
-#RUN mvn package 
-
-#FROM davidcaste/alpine-tomcat:tomcat7
-#WORKDIR /root/
-#COPY --from=0 /app/target/struts-networkpolicy-demo-0.0.1-SNAPSHOT.war  /opt/tomcat/webapps/ROOT.war 
-#RUN chmod 777 /opt/tomcat -R 
-#CMD /opt/tomcat/bin/catalina.sh run
